--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
             <version>2.3.1</version>
-        </dependency>ç
+        </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
@@ -57,6 +57,11 @@
 	    <artifactId>hibernate-entitymanager</artifactId>
 	    <version>5.6.14.Final</version>
 	</dependency>
+	<dependency>
+    <groupId>javassist</groupId>
+    <artifactId>javassist</artifactId>
+    <version>3.12.1.GA</version>
+</dependency>
 	<!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
 	<dependency>
 	    <groupId>javax.persistence</groupId>
